# b2cargo-pdf

./: .gitignore  KURULUM_WINDOWS.md  README.md  arayuz.bat  calistir.bat  kur.bat  launch_gui.py  pyproject.toml  requirements.txt  teshis.bat  teshis.py
.github/workflows/: build-windows.yml
config/: dsv_lokasyonlar.yaml  regions.yaml
perfetti_splitter/: __init__.py  cli.py  extractor.py  gui.py  parser.py  pipeline.py  regions.py  report.py  splitter.py
tests/: conftest.py  test_gui.py  test_parser.py  test_pipeline.py  test_regions.py  test_regression_documents.py  test_splitter.py
